--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 635 -
+[2008/12/05] Aeomin - Ground item removal Part I
+-
+
 - Rev 634 -
 [2008/12/05] Aeomin - Removed disturbing IFF and use another method.
 [2008/12/05] Aeomin - Fixed player shown as wearing xmas suit
