--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 637 -
+[2008/12/05] Aeomin - Finish up ground item removal thread.
+         the timer will be reset if server restart
+-
+
 - Rev 636 -
 [2008/12/05] Aeomin - Ground item removal Part II
 [2008/12/05] Aeomin - Moved AreaLoop from TBeing to TGameObject
