--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 639 -
+[2008/12/06] Aeomin - Instance map Part I
+-
+
 - Rev 638 -
 [2008/12/06] Aeomin - Rewrote most of ground item removal thread to fix a bug.
 -
