--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 651 -
+[2008/12/10] Aeomin - Optimized GetNameAndID procedure, it should be way faster.
+                      [ZoneRecv.pas]
+-
+
 - Rev 650 -
 [2008/12/10] RabidCh - Added some headers to LuaCoreRoutines.
 [2008/12/10] RabidCh - Misc. typo fixes and changed English spelling.
