--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 654 -
+[2008/12/13] Aeomin - Fixed a typo in last commit.
+-
+
 - Rev 653 -
 [2008/12/13] Aeomin - Speed up mapload MORE! However, this does not apply to Instance Map.
 [2008/12/13] Aeomin - The trick of this was put NPC object into map's NPCList instead
