--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 655 -
+[2008/12/13] Aeomin - Fixed warp portal not shown.
+-
+
 - Rev 654 -
 [2008/12/13] Aeomin - Fixed a typo in last commit.
 -
