--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 657 -
+[2008/12/14] Aeomin - Mob implementation Part II.
+[2008/12/14] Aeomin - This is an attempt of MobAI.
+-
+
 - Rev 656 -
 [2008/12/13] Aeomin - Forgot commit dpr change
 [2008/12/13] Aeomin - Fixed NPC become small after warp
