--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 662 -
+[2008/12/18] Aeomin - Fixed a typo that loads item script into NPCLua
+-
+
 - Rev 661 -
 [2008/12/18] Aeomin - Tweak TMapList & TBeingList for TObjectList NEVER
                       actually owns object (Borland's fault)
