--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 667 -
+[2009/01/14] Aeomin - Merged InstanceList to MapList.
+[2009/01/14] Aeomin - Although sharing same list seems to be funky, but it will
+                      reduce problems later on...
+-
+
 - Rev 666 -
 [2009/01/13] Aeomin - Updated sqlite DB.
 -
