--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 673 -
+[2009/01/17] Aeomin - Added packet $01fa & $027c in Login Server.
+[2009/01/17] Aeomin - WIP ChatRoom.
+-
+
 - Rev 672 -
 [2009/01/17] Aeomin - Added TAIBeing & TChatRoom class.
 [2009/01/17] Aeomin - TAIBeing used to classify all beings that uses AI.
