--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 674 -
+[2009/01/17] Aeomin - Chatroom implementation part I.
+-
+
 - Rev 673 -
 [2009/01/17] Aeomin - Added packet $01fa & $027c in Login Server.
 [2009/01/17] Aeomin - WIP ChatRoom.
