--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 675 -
+[2009/01/17] Aeomin - Chatroom implementation part II.
+-
+
 - Rev 674 -
 [2009/01/17] Aeomin - Chatroom implementation part I.
 -
