--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 681 -
+[2009/04/16] Aeomin - Chatroom implementation part IV.
+-
+
 - Rev 680 -
 [2009/04/16] Aeomin - Fixed crash when reach beyond level 1
 [2009/01/19] Aeomin - Updated packet_db
